; ModuleID = '/home/carl/AnghaBench/libgit2/examples/extr_tag.c_lg2_tag.c'
source_filename = "/home/carl/AnghaBench/libgit2/examples/extr_tag.c_lg2_tag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32*, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lg2_tag(i32* %0, i32 %1, i8** %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32 (%struct.TYPE_4__*)*, align 8
  %9 = alloca %struct.TYPE_4__, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8** %2, i8*** %6, align 8
  %10 = call i32 @tag_options_init(i32* %7)
  %11 = bitcast i32 (%struct.TYPE_4__*)** %8 to i32 (%struct.TYPE_4__*)*
  %12 = load i32, i32* %5, align 4
  %13 = load i8**, i8*** %6, align 8
  %14 = call i32 @parse_options(i32 (%struct.TYPE_4__*)* %11, i32* %7, i32 %12, i8** %13)
  %15 = load i32*, i32** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 1
  store i32* %15, i32** %16, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  store i32* %7, i32** %17, align 8
  %18 = load i32 (%struct.TYPE_4__*)*, i32 (%struct.TYPE_4__*)** %8, align 8
  %19 = call i32 %18(%struct.TYPE_4__* %9)
  ret i32 0
}

declare dso_local i32 @tag_options_init(i32*) #1

declare dso_local i32 @parse_options(i32 (%struct.TYPE_4__*)*, i32*, i32, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
